--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "devDependencies": {
     "@types/marked": "^4.0.2",
     "@vitejs/plugin-vue": "^2.2.0",
+    "autoprefixer": "^10.4.4",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
     "vue-tsc": "^0.29.8"
